# dtse

./: .env  .env.example  .gitignore  README.md  docker-compose.yaml  makefile  pyproject.toml
.dvc/: config
data/raw/: .gitignore  DTSE_AIS_unemployment_task_data.csv.dvc
data/results/: df_pop.csv.dvc  df_pop_test.csv.dvc  df_unemp.csv.dvc  df_unemp_test.csv.dvc
notebooks/: DTSE_AIS_unemployment_task.ipynb  eda_modelling.ipynb  nbeats.ipynb
src/training/: pipeline.py
src/training/config/: config.json
src/training/experiment_tracker/: __init__.py  experiment_tracker.py
src/training/util/: __init__.py  config.py  evaluation.py  file.py  prepare_data.py
