[tool.poetry]
name = "dtse"
version = "0.1.0"
description = ""
authors = ["yauheni <yauheni.kachalouski@ibm.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"

[tool.poetry.dev-dependencies]
dvc = "^2.23.0"
dvc-s3 = "^2.19.0"
numpy = "^1.23.2"
pandas = "^1.4.4"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
statsmodels = "^0.13.2"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
plotly = "^5.10.0"
jupyter = "^1.0.0"
torch = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
