[tool.poetry]
name="dtse_model"
version="0.1.0"
description="DTSE interview task"
authors = ["Yauheni Kachalouski <kachalouski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
dvc = "^2.23.0"
dvc-s3 = "^2.19.0"
numpy = "^1.23.2"
pandas = "^1.4.4"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"
statsmodels = "^0.13.2"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
plotly = "^5.10.0"
jupyter = "^1.0.0"
tqdm = "^4.64.0"
darts = "^0.21.0"
openpyxl = "^3.0.10"
click = "^8.1.3"
mlflow = "^1.28.0"
python-dotenv = "^0.21.0"
pmdarima = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
